refactoring without function change - diamond operator